I added the assets folder into the Basic-Portfolio folder and added images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+    <div>
         <div id ="name">
             <h1>Alex Watkins</h1>
         </div>
@@ -17,10 +18,12 @@
             <a href = "portfolio.html">Portfolio</a>
             <a href = "contact.html">Contact</a>
         </div>
+    </div>
     </header>
 
     <section>
-        <h2>About me</h2>
+        <aside>
+            <h2>About me</h2>
 
             <img src ="#">
 
@@ -32,9 +35,12 @@
             <p>I decided to make a career changee and left my job as a Deputy and am currently attending Georgia Tech Coding Bootcamp where I expect to graduate 
                 in December 2018.
             </p>
+        </aside>
     </section>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
     
 
 
