--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 </head>
 <body>
         <header>
+            <div>
                 <div id ="name">
                     <h1>Alex Watkins</h1>
                 </div>
@@ -17,6 +18,7 @@
                     <a href = "portfolio.html">Portfolio</a>
                     <a href = "contact.html">Contact</a>
                 </div>
+            </div>
         </header>
 
         <section>
