--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" type ="text/css" href = "css\style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Contact</title>
 </head>
+
+<div class="header">
+    <header>
+        <div class="h1">
+            <h1>Alex Watkins</h1>
+        </div>
+        <div class="list">
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+    </header>
+</div>
+
 <body>
-    
+    <div id="contact-field">
+        <h2 id="contacthead">Contact</h2>
+        <div class="container">
+            <form id="contact-form">
+                Name<br>
+                <input type="text" name="name"><br> Email
+                <br>
+                <input type="email"><br> Message
+                <br>
+                <textarea rows = "4" cols = "100" name = "message" placeholder="Provide Info"></textarea>
+                <br>
+                <input type="submit" value="Submit">
+
+            </form>
+        </div>
+    </div>
 </body>
+
+
 </html>
