--- a/index.html
+++ b/index.html
@@ -5,43 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Alex's Portfolio</title>
 </head>
 
 <body>
-<div class = "header">
-    <header>
-        <div class="h1">
-            <h1>Alex Watkins</h1>
-        </div>
-        <div class="list">
-            <a href = "index.html">About</a>
-            <a href = "portfolio.html">Portfolio</a>
-            <a href = "contact.html">Contact</a>
-        </div>
+    <div class="header">
+        <header>
+            <div class="h1">
+                <h1>Alex Watkins</h1>
+            </div>
+            <div class="list">
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </div>
 
-    </header>
-</div>
+        </header>
+    </div>
 
-    <div class="full">
-        <div id = "about">
+    <div id="full">
+        <div id="about">
             <h2>About Me</h2>
         </div>
-
+        <div id="clearfix">
             <img src="assets/images/Img4.jpg">
 
-            <p>My name is Alex Watkins. I'm married and live with my wife, Crystal Watkins, in Atlanta, Ga. I grew up close
-                by in Roswell, Ga. I graduated from Roswell High School in 2005 and attended Auburn University where I majored
-                in Criminology and Criminal Justice. I received my Bachelor's degree from Auburn University and began my
-                career in Law Enforcement. I was a Police Officer in Montgomery, Al for two years and a Deputy Sheriff at
-                Cherokee County, Ga for 3 1/2 years.
-            </p>
-
-            <p>I decided to make a career changee and left my job as a Deputy and am currently attending Georgia Tech Coding
-                Bootcamp where I expect to graduate in December 2018.
-            </p>
+            <div id="p1">
+                <p>My name is Alex Watkins. I'm married and live with my wife, Crystal Watkins, in Atlanta, Ga. I grew up
+                    close by in Roswell, Ga. I graduated from Roswell High School in 2005 and attended Auburn University
+                    where I majored in Criminology and Criminal Justice. I received my Bachelor's degree from Auburn University
+                    and began my career in Law Enforcement. I was a Police Officer in Montgomery, Al for two years and a
+                    Deputy Sheriff at Cherokee County, Ga for 3 1/2 years.
+                </p>
+            </div>
+            <div id="p2">
+                <p>I decided to make a career changee and left my job as a Deputy and am currently attending Georgia Tech
+                    Coding Bootcamp where I expect to graduate in December 2018.
+                </p>
+            </div>
+        </div>
     </div>
 
     <footer>
