--- a/portfolio.html
+++ b/portfolio.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" type ="text/css" href = "css\style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
-<body>
-        <header>
-            <div>
-                <div id ="name">
-                    <h1>Alex Watkins</h1>
-                </div>
-                <div id = "links">
-                    <a href = "index.html">About</a>
-                    <a href = "portfolio.html">Portfolio</a>
-                    <a href = "contact.html">Contact</a>
-                </div>
-            </div>
-        </header>
 
-        <section>
-            <h2>Portfolio</h2>
-        </section>
-    
+<body>
+    <div class="header">
+        <header>
+            <div class="h1">
+                <h1>Alex Watkins</h1>
+            </div>
+            <div class="list">
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </div>
+
+        </header>
+    </div>
+
+    <section>
+        <h2>Portfolio</h2>
+    </section>
+
 </body>
+
 </html>
