I added a footer to all the pages and changed the font of the links in the header

--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
                     close by in Roswell, Ga. I graduated from Roswell High School in 2005 and attended Auburn University
                     where I majored in Criminology and Criminal Justice. I received my Bachelor's degree from Auburn University
                     and began my career in Law Enforcement. I was a Police Officer in Montgomery, Al for two years and a
-                    Deputy Sheriff at Cherokee County, Ga for 3 1/2 years.
+                    Deputy Sheriff at Cherokee County, Ga for 3 1/2 years. I decided to make a career changee and left my
+                    job as a Deputy and am currently attending Georgia Tech Coding Bootcamp where I expect to graduate in
+                    December 2018.
                 </p>
             </div>
             <div id="p2">
-                <p>I decided to make a career changee and left my job as a Deputy and am currently attending Georgia Tech
-                    Coding Bootcamp where I expect to graduate in December 2018.
+                <p>
+                    In my spare time I enjoy hanging out with my wife, my friends and my family. I enjoy watching Braves Baseball and love college
+                    football. I enjoy traveling and anything involving the outdoors.
                 </p>
             </div>
         </div>
     </div>
 
-    <footer>
-
-    </footer>
+    <div class = "footer"></div>
 
 
 
