--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
         <h2 id="contacthead">Contact</h2>
         <div class="container">
             <form id="contact-form">
-                Name<br>
-                <input type="text" name="name"><br> Email
+                Name:<br>
+                <input type="text" name="name"><br> Email:
                 <br>
-                <input type="email"><br> Message
+                <input type="email"><br> Message:
                 <br>
                 <textarea rows = "4" cols = "100" name = "message" placeholder="Provide Info"></textarea>
                 <br>
@@ -40,7 +40,10 @@
             </form>
         </div>
     </div>
+
+    
 </body>
+    <div class = "footer"></div>
 
 
 </html>
