I added some images to the portfolio.html page

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,23 @@
         </header>
     </div>
 
-    <section>
-        <h2>Portfolio</h2>
-    </section>
+    <div id="full2">
+        <div id="portfolio">
+            <h2>Portfolio</h2>
+        </div>
+        <div class="images">
+            <img id = "img" src="assets/images/marines.jpg">
+            <img id = "img2" src ="assets/images/img3.jpg">
+        </div>
 
-    <div class = "footer"></div>
+
+
+
+
+
+    </div>
+
+    <div class="footer"></div>
 
 </body>
 
