--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <header>
             <div class="h1">
-                <h1>Alex Watkins</h1>
+                <h1><a href ="index.html">Alex Watkins</a></h1>
             </div>
             <div class="list">
                 <a href="index.html">About</a>
