--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
     
 </body>
-    <div class = "footer">Copyright&copy</div>
+    <div class = "footer"><div class = "footer-text">Copyright&copy</div></div>
 
 
 </html>
