--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class = "footer">Copyright&copy</div>
+    <div class = "footer"><div class = "footer-text">Copyright&copy</div></div>
     
 
 
