--- a/portfolio.html
+++ b/portfolio.html
@@ -24,41 +24,47 @@
         </header>
     </div>
 
-    <div id="full2">
+    <div id="portfolio-box">
         <div id="portfolio">
             <h2>Portfolio</h2>
         </div>
-        <!-- <div class="images"> -->
-        <div id = "img">
-                <a href = "#"class = "message" href="#">USMC Ball</a>
 
-            <img class ="image" src="assets/images/marines.jpg" alt="USMC Ball">
-        </div>   
+        <div id="img1-container">
+            <a href="#" class="message" href="#">USMC Ball</a>
 
-        <!-- <div id = "img2">
-                <a href = "#"class = "message" href="#">Beach</a>
-
-            <img class ="image" src="assets/images/img3.jpg" alt="Beach Pic">
-        </div>  -->
-         <!-- <div id = "img2">
-            <img class="image" src="assets/images/img3.jpg" alt="Beach Pic">
-            <a href ="#"
+            <img class="image" src="assets/images/marines.jpg" alt="USMC Ball">
         </div>
-        <div id = "img3"> -->
-            <!-- <img class="image" src="assets/images/img5.jpg" alt="College Graduation">
-        </div> --> 
-         <!-- <div class="images-bottom">  -->
-        <!-- <div id = "img4">
-            <img class="image" src="assets/images/img6.jpg" alt="Grand Canyon">
+        <div id="img2-container">
+            <a href="#" class="message2">Beach</a>
+
+            <img class="image" src="assets/images/Img4.jpg">
         </div>
-        <div id = "img5">
-            <img class = "image" src="assets/images/marines3.jpg" alt="Mean Mug">
-        </div>  -->
+        <div id="img3-container">
+            <a href="#" class="message3">College Graduation</a>
+
+            <img class="image" src="assets/images/img5.jpg">
+
+        </div>
+        <div id="img4-container">
+
+            <a href="#" class="message4">Military</a>
+
+            <img class="image" src="assets/images/marines2.jpg">
+        </div>
+        <div id = "img5-container">
+            <a href = "#" class = "message5">Marines</a>
+            <img class = "image" src = "assets/images/marines3.jpg">
+        </div>
+
+
+
+
 
 
     </div>
 
-    <div class="footer">Copyright&copy</div>
+    <div class="footer">
+        <div class="footer-text">Copyright&copy</div>
 
 </body>
 
